setup rating system

--- a/blog_app/templates/blog_app/blog_detail_page.html
+++ b/blog_app/templates/blog_app/blog_detail_page.html
@@ -139,7 +139,7 @@
                                                     {% endfor %}
                                                 </div>
                                                 <span class="rating-total d-block">({{ total_votes }}) </span>
-                                                <span>رتبه بندی دوره</span>
+                                                <span>رتبه بندی مقاله</span>
                                             </div>
                                             <!-- end rating-wrap -->
                                         </div>
@@ -193,7 +193,6 @@
 
                                     <div class="comment-list">
                                         {% for comment in comments %}
-                                            {# نمایش فقط اگر کامنت فعال است یا متعلق به خود کاربر است #}
                                             {% if comment.is_active or request.user == comment.user %}
                                                 <div class="media media-card border-bottom border-bottom-gray pb-4 mb-4 {% if not comment.is_active %}bg-light{% endif %}">
                                                     <div class="media-img mr-4 rounded-full">
@@ -214,11 +213,22 @@
                                                                 {% endif %}
                                                             </h5>
                                                             <div class="review-stars">
-                                                                <span class="la la-star"></span>
-                                                                <span class="la la-star"></span>
-                                                                <span class="la la-star"></span>
-                                                                <span class="la la-star"></span>
-                                                                <span class="la la-star"></span>
+                                                                {% if comment.user and comment.user.id in user_ratings %}
+                                                                    {% with user_ratings|dict_get:comment.user.id as user_score %}
+                                                                        {% for i in "12345" %}
+                                                                            {% if forloop.counter <= user_score %}
+                                                                                <span class="la la-star" style="color: gold;"></span>
+                                                                            {% else %}
+                                                                                <span class="la la-star-o" style="color: lightgray;"></span>
+                                                                            {% endif %}
+                                                                        {% endfor %}
+                                                                    {% endwith %}
+                                                                {% else %}
+                                                                    {# کاربر امتیاز نداده #}
+                                                                    {% for i in "12345" %}
+                                                                        <span class="la la-star-o" style="color: lightgray;"></span>
+                                                                    {% endfor %}
+                                                                {% endif %}
                                                             </div>
                                                         </div>
                                                         <span class="d-block lh-18 pb-2">{{ comment.create_date|timeago }}</span>
@@ -324,10 +334,11 @@
                                     <div class="input-box">
                                         <label class="label-text">عبارت امنیتی</label>
                                         <div class="form-group">
-                                            <img src="/captcha/image/74f443cbe4bcd75250beaf2ab50712d8b047be8d/" alt="captcha" class="captcha">
-                                            <input type="hidden" name="captcha_0" value="74f443cbe4bcd75250beaf2ab50712d8b047be8d" required="" id="id_captcha_0"
-                                                   autocomplete="off"><input type="text" name="captcha_1" required="" id="id_captcha_1" autocapitalize="off"
-                                                                             autocomplete="off" autocorrect="off" spellcheck="false">
+                                            <img src="{{ captcha_url }}" alt="captcha" class="captcha">
+                                            <input type="hidden" name="captcha_0" value="{{ captcha_key }}" required="" id="id_captcha_0"
+                                                   autocomplete="off">
+                                            <input type="text" name="captcha_1" required="" id="id_captcha_1" autocapitalize="off"
+                                                   autocomplete="off" autocorrect="off" spellcheck="false">
                                             <a href="#" id="refresh-captcha">↻ تغییر تصویر</a>
 
 
