--- a/templates/shared/footer_references.html
+++ b/templates/shared/footer_references.html
@@ -13,4 +13,7 @@
 <script src="{% static 'js/tooltipster.bundle.min.js' %}"></script>
 <script src="{% static 'js/jquery.lazy.min.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="{% static 'js/chart.js' %}"></script>
+<script src="{% static 'js/doughnut-chart.js' %}"></script>
 <script src="{% static 'js/custom.js' %}"></script>
