--- a/userprofile_app/templates/userprofile_app/lectures/lecture_comments_list.html
+++ b/userprofile_app/templates/userprofile_app/lectures/lecture_comments_list.html
@@ -60,15 +60,13 @@
                 <table class="table generic-table align-middle">
                     <thead>
                     <tr>
-                        <th scope="col">سخرانی</th>
+                        <th scope="col">سخنرانی</th>
                         <th scope="col">نظر</th>
                         <th scope="col">تاریخ نظر</th>
-                        <th scope="col">اکتیو</th>
-                        <th scope="col">حذف</th>
                         <th scope="col">پاسخ</th>
                         <th scope="col">تاریخ پاسخ</th>
-                        <th scope="col">اکتیو(پاسخ)</th>
-                        <th scope="col">حذف(پاسخ)</th>
+                        <th scope="col">اکتیو</th>
+                        <th scope="col">حذف</th>
                         <th scope="col">اقدام</th>
                     </tr>
                     </thead>
@@ -78,43 +76,24 @@
                         <tr>
                             <!-- lecture -->
                             <th scope="row">
-                                <a href="{% url 'blog_app:blog_detail' pk=comment.lecture.id %}"
+                                <a href="{% url 'userprofile_app:lecture_comment_detail' pk=comment.id %}"
                                    class="text-black">{{ comment.lecture.title }}</a>
                             </th>
 
 
-                            <!-- comment text -->
-                            <td>
+                            <!-- ستون نظر اصلی -->
+                            <td style="width: 350px;">
                                 {{ comment.text }}
                                 <br>
                                 <span style="color: indianred">
                                     ({{ comment.user.get_full_name }})
                                 </span>
                             </td>
-
                             <!-- create_date comment -->
-                            <td>{{ comment.created_date|to_shamsi }}</td>
-
-                            <!-- is_active -->
-                            <td>
-                                {% if comment.is_active %}
-                                    <span style="color:green;">&#10004;</span>
-                                {% else %}
-                                    <span style="color:red;">&#10008;</span>
-                                {% endif %}
-                            </td>
-
-                            <!-- is_delete -->
-                            <td>
-                                {% if comment.is_delete %}
-                                    <span style="color:green;">&#10004;</span>
-                                {% else %}
-                                    <span style="color:red;">&#10008;</span>
-                                {% endif %}
-                            </td>
+                            <td>{{ comment.create_date|to_shamsi }}</td>
 
                             <!-- response comment -->
-                            <td>
+                            <td style="width: 350px;">
                                 {% if comment.lecturecomment_set.all %}
                                     {% for reply in comment.lecturecomment_set.all %}
                                         {{ reply.text }}
@@ -127,12 +106,11 @@
                                     <span style="color: gray;">—</span>
                                 {% endif %}
                             </td>
-
                             <!-- create_date response -->
                             <td>
                                 {% if comment.lecturecomment_set.all %}
                                     {% for reply in comment.lecturecomment_set.all %}
-                                        {{ reply.created_date|to_shamsi }}
+                                        {{ reply.create_date|to_shamsi }}
                                         <br>
                                     {% endfor %}
                                 {% else %}
@@ -141,25 +119,24 @@
 
                             </td>
 
-                            {% if comment.lecturecomment_set.all.first|default_if_none:"-" %}
-                                <!-- is_active -->
-                                <td>
-                                    {% if comment.lecturecomment_set.all.first.is_active %}
-                                        <span style="color:green;">&#10004;</span>
-                                    {% else %}
-                                        <span style="color:red;">&#10008;</span>
-                                    {% endif %}
-                                </td>
 
-                                <!-- is_delete -->
-                                <td>
-                                    {% if comment.lecturecomment_set.all.first.is_delete %}
-                                        <span style="color:green;">&#10004;</span>
-                                    {% else %}
-                                        <span style="color:red;">&#10008;</span>
-                                    {% endif %}
-                                </td>
-                            {% endif %}
+                            <!-- is_active -->
+                            <td class="text-center">
+                                {% if comment.is_active %}
+                                    <span style="color:green;">&#10004;</span>
+                                {% else %}
+                                    <span style="color:red;">&#10008;</span>
+                                {% endif %}
+                            </td>
+
+                            <!-- is_delete -->
+                            <td class="text-center">
+                                {% if comment.is_delete %}
+                                    <span style="color:green;">&#10004;</span>
+                                {% else %}
+                                    <span style="color:red;">&#10008;</span>
+                                {% endif %}
+                            </td>
 
                             <!-- actions -->
                             <td>
@@ -201,7 +178,7 @@
                                                     <div class="btn-box pt-4">
 
                                                         <form
-                                                                action="{% url 'userprofile_app:article_comment_delete' pk=comment.id %}"
+                                                                action="{% url 'userprofile_app:lecture_comment_delete' pk=comment.id %}"
                                                                 method="post">
                                                             {% csrf_token %}
                                                             <button type="button" class="btn font-weight-medium mr-3"
@@ -217,7 +194,6 @@
                                             </div>
                                         </div>
                                     </div>
-
 
                                 </div>
                             </td>
