--- a/templates/shared/footer_references.html
+++ b/templates/shared/footer_references.html
@@ -16,4 +16,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="{% static 'js/chart.js' %}"></script>
 <script src="{% static 'js/doughnut-chart.js' %}"></script>
+<script src="{% static 'js/bar-chart.js' %}"></script>
+<script src="{% static 'js/line-chart.js' %}"></script>
+
 <script src="{% static 'js/custom.js' %}"></script>
