--- a/templates/shared/dashboard.html
+++ b/templates/shared/dashboard.html
@@ -35,7 +35,7 @@
 
             <!-- dashboard -->
             <li>
-                <a class="text-color-2" href="{% url 'userprofile_app:user_panel_dashboard_page' %}">
+                <a href="{% url 'userprofile_app:user_panel_dashboard_page' %}" class="text-color-2">
                     <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
                         <path d="M0 0h24v24H0V0z" fill="none"></path>
                         <path d="M19 5v2h-4V5h4M9 5v6H5V5h4m10 8v6h-4v-6h4M9 17v2H5v-2h4M21 3h-8v6h8V3zM11 3H3v10h8V3zm10 8h-8v10h8V11zm-10 4H3v6h8v-6z"></path>
@@ -47,7 +47,7 @@
             <!-- user profile -->
             <li class="dropdown position-relative">
                 <a href="#userProfileSubMenu"
-                   class="dropdown-toggle d-flex align-items-center justify-content-between"
+                   class="dropdown-toggle d-flex align-items-center justify-content-between text-color-2"
                    data-toggle="collapse"
                    aria-expanded="{% if request.resolver_match.url_name in 'user_profile_detail user_profile_edit user_profile_change_password user_profile_change_email' %}true{% else %}false{% endif %}"
                    aria-controls="userProfileSubMenu"
@@ -99,7 +99,7 @@
             {% if perms.blog_app.view_article or perms.blog_app.view_articlecategory or perms.blog_app.view_articletag or perms.blog_app.view_articlecomment %}
                 <li class="dropdown position-relative">
                     <a href="#article"
-                       class="dropdown-toggle d-flex align-items-center justify-content-between"
+                       class="dropdown-toggle d-flex align-items-center justify-content-between text-color-2"
                        data-toggle="collapse"
                        aria-expanded="{% if request.resolver_match.url_name in 'articles_list article_categories_list article_tags_list article_comments_list' %}true{% else %}false{% endif %}"
                        aria-controls="userProfileSubMenu"
@@ -155,7 +155,7 @@
             {% if perms.media_app.view_lecture or perms.media_app.view_lecturecategory or perms.media_app.view_lecturetag or perms.media_app.view_lecturecomment or perms.media_app.view_lectureclip %}
                 <li class="dropdown position-relative">
                     <a href="#lecture"
-                       class="dropdown-toggle d-flex align-items-center justify-content-between"
+                       class="dropdown-toggle d-flex align-items-center justify-content-between text-color-2"
                        data-toggle="collapse"
                        aria-expanded="{% if request.resolver_match.url_name in 'lectures_list lecture_categories_list lecture_tags_list lecture_comments_list lecture_clips_list' %}true{% else %}false{% endif %}"
                        aria-controls="lectureSubMenu"
@@ -216,12 +216,11 @@
                 </li>
             {% endif %}
 
-
             <!-- gallery -->
             {% if perms.media_app.view_galleryimage or perms.media_app.view_gallerycategory %}
                 <li class="dropdown position-relative">
                     <a href="#gallery"
-                       class="dropdown-toggle d-flex align-items-center justify-content-between"
+                       class="dropdown-toggle d-flex align-items-center justify-content-between text-color-2"
                        data-toggle="collapse"
                        aria-expanded="{% if request.resolver_match.url_name in 'galleries_list gallery_categories_list' %}true{% else %}false{% endif %}"
                        aria-controls="gallerySubMenu"
@@ -258,12 +257,11 @@
                 </li>
             {% endif %}
 
-
             <!-- Links -->
             {% if perms.main_app.view_footerlink or perms.main_app.view_footerlinkbox %}
                 <li class="dropdown position-relative">
                     <a href="#links"
-                       class="dropdown-toggle d-flex align-items-center justify-content-between"
+                       class="dropdown-toggle d-flex align-items-center justify-content-between text-color-2"
                        data-toggle="collapse"
                        aria-expanded="{% if request.resolver_match.url_name in 'footer_links_list footer_link_boxes_list' %}true{% else %}false{% endif %}"
                        aria-controls="gallerySubMenu"
@@ -302,7 +300,7 @@
             <!-- Contact Us -->
             {% if perms.main_app.view_contactus %}
                 <li>
-                    <a href="{% url 'userprofile_app:contact_us_list' %}">
+                    <a class="text-color-2" href="{% url 'userprofile_app:contact_us_list' %}">
                         <svg class="mr-2" xmlns="http://www.w3.org/1380/svg" height="18px" viewBox="0 0 24 24" width="18px">
                                 <path d="M0 0h24v24H0V0z" fill="none"></path>
                                 <path d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"></path>
@@ -315,7 +313,7 @@
             <!-- slider -->
             {% if perms.main_app.view_slider %}
                 <li>
-                    <a href="{% url 'userprofile_app:sliders_list' %}">
+                    <a href="{% url 'userprofile_app:sliders_list' %}" class="text-color-2">
                         <svg class="mr-2" xmlns="http://www.w3.org/1380/svg" height="18px" viewBox="0 0 24 24" width="18px">
                                 <path d="M0 0h24v24H0V0z" fill="none"></path>
                                 <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"></path>
@@ -329,7 +327,7 @@
             {% if perms.main_app.view_sitesetting %}
                 {% if site_setting %}
                     <li>
-                        <a href="{% url 'userprofile_app:site_setting_edit' site_setting.id %}">
+                        <a href="{% url 'userprofile_app:site_setting_edit' site_setting.id %}" class="text-color-2">
                             <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
                                 <path d="M0 0h24v24H0V0z" fill="none"></path>
                                 <path d="M19.43 12.98c.04-.32.07-.64.07-.98 0-.34-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.09-.16-.26-.25-.44-.25-.06 0-.12.01-.17.03l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1c-.06-.02-.12-.03-.18-.03-.17 0-.34.09-.43.25l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98 0 .33.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.09.16.26.25.44.25.06 0 .12-.01.17-.03l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.06.02.12.03.18.03.17 0 .34-.09.43-.25l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zm-1.98-1.71c.04.31.05.52.05.73 0 .21-.02.43-.05.73l-.14 1.13.89.7 1.08.84-.7 1.21-1.27-.51-1.04-.42-.9.68c-.43.32-.84.56-1.25.73l-1.06.43-.16 1.13-.2 1.35h-1.4l-.19-1.35-.16-1.13-1.06-.43c-.43-.18-.83-.41-1.23-.71l-.91-.7-1.06.43-1.27.51-.7-1.21 1.08-.84.89-.7-.14-1.13c-.03-.31-.05-.54-.05-.74s.02-.43.05-.73l.14-1.13-.89-.7-1.08-.84.7-1.21 1.27.51 1.04.42.9-.68c.43-.32.84-.56 1.25-.73l1.06-.43.16-1.13.2-1.35h1.39l.19 1.35.16 1.13 1.06.43c.43.18.83.41 1.23.71l.91.7 1.06-.43 1.27-.51.7 1.21-1.07.85-.89.7.14 1.13zM12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 6c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"></path>
@@ -344,7 +342,7 @@
             {% if request.user|in_group:"Manager"  or request.user.is_superuser %}
                 <!-- Group -->
                 <li>
-                    <a href="{% url 'userprofile_app:group_list' %}">
+                    <a href="{% url 'userprofile_app:group_list' %}" class="text-color-2">
                         <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24"
                              width="18px">
                             <path d="M0 0h24v24H0V0z" fill="none"></path>
@@ -358,7 +356,7 @@
 
                 <!-- users -->
                 <li>
-                    <a href="{% url 'userprofile_app:user_list' %}">
+                    <a href="{% url 'userprofile_app:user_list' %}" class="text-color-2">
                         <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24"
                              width="18px">
                             <path d="M0 0h24v24H0V0z" fill="none"></path>
@@ -373,7 +371,7 @@
 
             <!-- exit -->
             <li>
-                <a href="{% url 'account_app:logout_page' %}">
+                <a href="{% url 'account_app:logout_page' %}" class="text-color-2">
                     <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
                         <path d="M0 0h24v24H0V0z" fill="none"></path>
                         <path d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"></path>
