--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 <header class="header-menu-area bg-white">
+
     <!-- هدر سایت -->
     <div class="header-top pr-150px pl-150px border-bottom border-bottom-gray py-1">
         <div class="container-fluid">
@@ -33,7 +34,7 @@
                                         ادمین</a></li>
                                     <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
                                             class="la la-user mr-1"></i><a
-                                            href="{% url 'userprofile_app:user_panel_dashboard_page' %}">
+                                            href="{% url 'userprofile_app:dashboard_page' %}">
                                         حساب کاربری</a></li>
                                     <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
                                             class="la la-sign-out mr-1"></i><a
@@ -42,7 +43,7 @@
                                 {% else %}
                                     <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
                                             class="la la-user mr-1"></i><a
-                                            href="{% url 'userprofile_app:user_panel_dashboard_page' %}">
+                                            href="{% url 'userprofile_app:dashboard_page' %}">
                                         حساب کاربری</a></li>
                                     <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
                                             class="la la-sign-out mr-1"></i><a
@@ -65,6 +66,7 @@
             </div>
         </div>
     </div>
+
     <!-- لوگو، منو و سرچ -->
     <div class="header-menu-content pr-150px pl-150px bg-white">
         <div class="container-fluid">
@@ -79,9 +81,11 @@
                                     src="{% static 'images/Heiat-Red.png' %}" width="70" alt="لوگو"></a>
                         </div>
                     </div>
+
                     <!-- منو و سرچ -->
                     <div class="col-lg-11">
                         <div class="menu-wrapper d-flex justify-content-between align-items-center">
+
                             <!-- منو -->
                             <nav class="main-menu mr-auto">
                                 <ul class="d-flex mb-0">
@@ -92,7 +96,8 @@
                                     </li>
                                     <li class="ml-3">
                                         <a href="{% url 'blog_app:blog_list' %}"
-                                           class="{% if request.resolver_match.url_name == 'blog_app:blog_list' %}active{% endif %}">مقاله ها</a>
+                                           class="{% if request.resolver_match.url_name == 'blog_app:blog_list' %}active{% endif %}">مقاله
+                                            ها</a>
                                     </li>
                                     <li class="ml-3">
                                         <a href="{% url 'media_app:lecture_list_page' %}">سخنرانی ها</a>
@@ -113,12 +118,19 @@
 
                                 </ul>
                             </nav>
+
                             <!-- سرچ -->
-                            <form method="post" class="ml-auto">
-                                <div class="form-group mb-0">
-                                    <input class="form-control form--control pl-3" type="text" name="search"
-                                           placeholder="هر چیزی را جستجو کنید">
-                                    <span class="la la-search search-icon"></span>
+                            <form method="get" action="{% url 'main_app:search_page' %}">
+                                <div class="input-group">
+                                    <input class="form-control form--control pl-3"
+                                           type="text"
+                                           name="search"
+                                           placeholder="جستجو"
+                                           value="{{ request.GET.search }}">
+                                    <div class="input-group-append">
+                                        <button type="submit" class="btn theme-btn bg-info"><i class="la la-search"></i>
+                                        </button>
+                                    </div>
                                 </div>
                             </form>
                         </div>
