--- a/userprofile_app/templates/userprofile_app/articles/article_form.html
+++ b/userprofile_app/templates/userprofile_app/articles/article_form.html
@@ -111,6 +111,9 @@
                                     {{ form.text }}
                                 </div>
                             </div>
+                            <!-- نمایش شمارنده کلمات -->
+                            <div id="word-count" style="margin-top: 8px; font-size: 14px; color: gray;"></div>
+
 
                             <!-- image -->
                             <div class="col-lg-12 mt-5">
