--- a/blog_app/templates/blog_app/blog_detail_page.html
+++ b/blog_app/templates/blog_app/blog_detail_page.html
@@ -186,7 +186,7 @@
                                 <div class="comments-wrap pt-5" id="comments">
                                     <div class="d-flex align-items-center justify-content-between pb-4">
                                         <h3 class="fs-22 font-weight-semi-bold">نظرات <span
-                                                class="ribbon ribbon-lg">{{ article.articlecomment_set.all.count }}</span></h3>
+                                                class="ribbon ribbon-lg">{{ article_comments_count }}</span></h3>
                                     </div>
                                     <div class="section-block mb-4"></div>
 
