--- a/media_app/templates/media_app/lecture_detail_page.html
+++ b/media_app/templates/media_app/lecture_detail_page.html
@@ -432,7 +432,7 @@
                                 <div class="comments-wrap pt-5" id="comments">
                                     <div class="d-flex align-items-center justify-content-between pb-4">
                                         <h3 class="fs-22 font-weight-semi-bold">نظرات <span
-                                                class="ribbon ribbon-lg">{{ lecture.lecturecomment_set.all.count }}</span></h3>
+                                                class="ribbon ribbon-lg">{{ lecture_comments_count }}</span></h3>
                                     </div>
                                     <div class="section-block mb-4"></div>
 
