setup ckeditor in field text article

--- a/userprofile_app/templates/userprofile_app/articles/article_form.html
+++ b/userprofile_app/templates/userprofile_app/articles/article_form.html
@@ -109,7 +109,7 @@
                             <!-- text -->
                             <div class="input-box col-lg-12">
                                 <label class="label-text">متن مقاله</label>
-                                <div class="form-group">{{ form.text }}</div>
+                                <div class="form-group">{{ form.text|add_attr:"id:text" }}</div>
                             </div>
 
                             <!-- image -->
